--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "main": "src/index.tsx",
   "dependencies": {
     "node-sass": "6.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-scripts": "4.0.3",
+		"typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
